# CppCache

./: CMakeLists.txt  README.md  main.cpp
include/: cache.hpp
src/: cache.cpp  cache_ideal.cpp
tests/: CMakeLists.txt  test_cache.cpp  tests.txt
tests/e2e/: run.sh
tests/e2e/io/ans/lfu/: tests.txt
tests/unit/: unit_test.cpp
